import "ydb/core/protos/counters.proto";

package NKikimr.NTestShard;

option java_package = "ru.yandex.kikimr.proto";

option (TabletTypeName) = "TestShard";

enum ECumulativeCounters {
    COUNTER_CUMULATIVE_IGNORE = 0;
}

enum ESimpleCounters {
    COUNTER_MODE_WRITE = 0 [(CounterOpts) = {Name: "ModeWrite"}];
    COUNTER_MODE_READ_VALIDATE = 1 [(CounterOpts) = {Name: "ModeReadValidate"}];
    COUNTER_MODE_STATE_SERVER_CONNECT = 2 [(CounterOpts) = {Name: "StateServerConnect"}];
    COUNTER_MODE_INITIAL = 3 [(CounterOpts) = {Name: "Initial"}];
}

enum EPercentileCounters {
    COUNTER_PERCENTILE_IGNORE = 0;
}
